tests/type-check/bad/data-as-object-extend-wrong-type.arr
data Foo:
  | bar(a :: Number, ref b :: String)
end

bar(1, "a").{b: "b"}